--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "card-genie-frontend/node_modules/.bin/next dev --turbopack",
-    "build": "card-genie-frontend/node_modules/.bin/next build",
-    "start": "card-genie-frontend/node_modules/.bin/next start",
-    "lint": "card-genie-frontend/node_modules/.bin/next lint"
+    "dev": "node_modules/.bin/next dev --turbopack",
+    "build": "node_modules/.bin/next build",
+    "start": "node_modules/.bin/next start",
+    "lint": "node_modules/.bin/next lint"
   },
   "dependencies": {
     "react": "^19.0.0",
